--- a/style.css
+++ b/style.css
@@ -65,15 +65,16 @@ canvas {
   transform: translateX(0);
 }
 
-.neonText {
-}
-
 .liveScoreBox {
   display: flex;
   width: 850px;
   justify-content: space-between;
   font-size: 40px;
   color: #fff;
-  text-shadow: 0 0 7px #fff, 0 0 10px #fff, 0 0 21px #fff, 0 0 42px #0fa,
-    0 0 82px #0fa, 0 0 92px #0fa, 0 0 102px #0fa, 0 0 151px #0fa;
+  /* text-shadow: 0 0 7px #fff, 0 0 10px #fff, 0 0 21px #fff, 0 0 42px #0fa,
+    0 0 82px #0fa, 0 0 92px #0fa, 0 0 102px #0fa, 0 0 151px #0fa; */
+  text-shadow: 0 0 7px #fff, 0 0 10px #fff, 0 0 21px #fff,
+    0 0 42px rgb(221, 255, 70), 0 0 82px rgb(221, 255, 70),
+    0 0 92px rgb(221, 255, 70), 0 0 102px rgb(221, 255, 70),
+    0 0 151px rgb(221, 255, 70);
 }
